<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/connection_settings">
        <Preference
            app:key="wifi_settings"
            app:title="@string/wifi_settings"
            app:summary="@string/wifi_settings_summary"
            app:icon="@drawable/ic_wifi" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_settings">

        <ListPreference
            app:key="theme"
            app:title="@string/theme"
            app:summary="%s"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:defaultValue="system"
            app:icon="@drawable/ic_palette" />

        <ListPreference
            app:key="language"
            app:title="@string/language"
            app:summary="%s"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="system"
            app:icon="@drawable/ic_language" />
            
        <ListPreference
            app:key="font_size"
            app:title="@string/font_size"
            app:summary="%s"
            app:entries="@array/font_size_entries"
            app:entryValues="@array/font_size_values"
            app:defaultValue="medium" />

        <com.example.medicationreminderapp.ImagePickerPreference
            app:key="character"
            app:title="@string/character"
            app:summary="%s"
            app:entries="@array/character_entries"
            app:entryValues="@array/character_values"
            app:defaultValue="kuromi"
            app:icon="@drawable/ic_face" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/update_settings">
        <ListPreference
            app:key="update_channel"
            app:title="@string/update_channel"
            app:summary="@string/update_channel_summary"
            app:entries="@array/update_channel_entries"
            app:entryValues="@array/update_channel_values"
            app:defaultValue="main"
            app:icon="@drawable/ic_update" />

        <Preference
            app:key="check_for_updates"
            app:title="@string/check_for_updates"
            app:summary="@string/check_for_updates_summary"
            app:icon="@drawable/ic_update"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/developer_settings">

        <SwitchPreferenceCompat
            app:key="engineering_mode"
            app:title="@string/engineering_mode"
            app:summary="@string/engineering_mode_summary"
            app:defaultValue="false"
            app:icon="@drawable/ic_developer_mode" />

        <Preference
            app:key="firmware_update"
            app:title="@string/firmware_update_title"
            app:summary="@string/firmware_update_summary"
            app:icon="@drawable/ic_update" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_category">
        <Preference
            app:key="app_author"
            app:title="@string/about_author"
            app:summary="Thumb2086"
            app:icon="@drawable/ic_face" />

        <Preference
            app:key="app_project"
            app:title="@string/about_project"
            app:summary="GitHub"
            app:icon="@drawable/ic_developer_mode" />

        <Preference
            app:key="app_version"
            app:title="@string/about_version"
            app:summary="1.0.0"
            app:icon="@drawable/ic_update" />
    </PreferenceCategory>

</PreferenceScreen>
