<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ReportFragment">

    <RadioGroup
        android:id="@+id/timeframe_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <RadioButton
            android:id="@+id/weekly_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeframe_week" />

        <RadioButton
            android:id="@+id/monthly_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeframe_month"
            android:checked="true" />

        <RadioButton
            android:id="@+id/quarterly_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeframe_quarter" />
    </RadioGroup>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/complianceChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/share_report_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:text="@string/share_report" />

</LinearLayout>
