<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <Button
        android:id="@+id/select_firmware_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firmware_select" />

    <TextView
        android:id="@+id/firmware_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/firmware_file_not_selected" />

    <ProgressBar
        android:id="@+id/update_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/start_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/firmware_start_update"
        android:enabled="false" />

</LinearLayout>
